--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "firebaseui": "^4.1.0",
     "nuxt": "^2.0.0",
     "vue-croppa": "^1.3.8",
+    "vue-cropper": "^0.4.9",
+    "vue-cropperjs": "^4.0.0",
+    "vue-croppie": "^2.0.1",
     "vue2-editor": "^2.10.2",
     "vuex-persistedstate": "^2.5.4"
   },
