--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/google-analytics": "^2.2.0",
+    "@nuxtjs/google-tag-manager": "^2.3.1",
     "@nuxtjs/pwa": "^2.6.0",
     "firebase": "^6.5.0",
     "firebaseui": "^4.2.0",
