Experiment done without onboarding

--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@nuxtjs/pwa": "^2.6.0",
     "firebase": "^6.5.0",
     "firebaseui": "^4.2.0",
-    "nuxt": "^2.0.0",
+    "nuxt": "^2.10.2",
     "rx-js": "0.0.0",
+    "vue-click-outside": "^1.0.7",
     "vue-rx": "^6.2.0",
     "vue2-editor": "^2.10.2",
     "vuejs-clipper": "^1.1.4",
