--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nuxt": "^2.10.2",
     "rx-js": "0.0.0",
     "vue-click-outside": "^1.0.7",
+    "vue-croppa": "^1.3.8",
     "vue-rx": "^6.2.0",
     "vue2-editor": "^2.10.2",
     "vuejs-clipper": "^1.1.4",
