--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/google-tag-manager": "^2.3.1",
     "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/sentry": "^3.3.1",
     "firebase": "^6.5.0",
     "firebaseui": "^4.2.0",
     "nuxt": "^2.10.2",
