--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebaseui": "^4.2.0",
     "nuxt": "^2.10.2",
     "rx-js": "0.0.0",
+    "v-lazy-image": "^1.4.0",
     "vue-click-outside": "^1.0.7",
     "vue-croppa": "^1.3.8",
     "vue-rx": "^6.2.0",
